Fix path after Github is not showing img

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,7 +247,7 @@ footer {
 /* Form */
 .form-section {
     clear: left;
-    background: url("/assets/images/formbg.jpg");
+    background: url("../images/formbg.jpg");
     background-size: cover;
     background-position: center;
     height: 900px;
